<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.Signupandroid.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup"
    android:id="@+id/rootLayout"
    android:layout_centerInParent="true"
    android:padding="10dp"
   >

    <EditText
        android:id="@+id/name"
        android:layout_width="358dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="130dp"
        android:background="@android:color/holo_blue_dark"
        android:ems="10"
        android:hint="Full names"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColorHint="@android:color/white"
        android:textStyle="bold" />



    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="74dp"
        android:background="@android:color/white"
        android:text="@string/have_an_account_already_click_to_login"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/signup"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:onClick="btnSignup_Click"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="160dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/register_now"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="358dp"
        android:layout_height="42dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="250dp"
        android:background="@android:color/holo_blue_dark"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColorHint="@android:color/white"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="357dp"
        android:layout_height="45dp"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="184dp"
        android:background="@android:color/holo_blue_dark"
        android:ems="10"
        android:hint="Email address"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColorHint="@android:color/white"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="383dp"
        android:layout_height="40dp"

        android:layout_alignParentTop="true"
        android:text="@string/get_started"
        android:gravity="center"
        android:textStyle="bold|italic"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:background="@android:color/holo_orange_dark"
        />



</RelativeLayout>